welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:22: error: object toInt is not a member of package ch
      m=ch.toInt()
           ^